feat: add meta property og

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:url" content="https://vivisanko.github.io/AwesomeProject/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Сognitive flexibility with avocado and tomato" />
+    <meta property="og:description" content="How quickly you match vegetables and fruits to color?" />
+    <meta property="og:image" content="%PUBLIC_URL%/color-brain.jpg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
