--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:url" content="https://vivisanko.github.io/AwesomeProject/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Сognitive flexibility with avocado and tomato" />
-    <meta property="og:description" content="How quickly you match vegetables and fruits to color?" />
+    <!-- <meta property="og:title" content="Сognitive flexibility with avocado and tomato" />
+    <meta property="og:description" content="How quickly you match vegetables and fruits to color?" /> -->
     <meta property="og:image" content="%PUBLIC_URL%/color-brain.jpg" />
   </head>
   <body>
